# agent-vision-mcp

./: .env.example  .gitignore  LICENSE  README.md  README_CN.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
agent_vision_mcp/: __init__.py  config.py  errors.py  provider_result.py  responses.py  server.py
agent_vision_mcp/image/: __init__.py  input.py  security.py
agent_vision_mcp/providers/: __init__.py  base.py  ocr_provider.py  openai_compatible.py
examples/: claude-code.mcp.json
tests/: test_image_input.py  test_provider.py  test_provider_result.py  test_responses.py  test_server_envelope.py  test_server_helpers.py  test_stdio_server.py
